[package]
name = "proget"
version = "0.1.4"
authors = ["Hunter Wittenborn <hunter@hunterwittenborn.com>"]
description = "A client for the ProGet API"
edition = "2021"
repository = "https://github.com/hwittenborn/proget-rust-sdk"
license = "GPL-3.0-only WITH GPL-3.0-linking-exception"
keywords = ["proget"]
categories = ["api-bindings"]

[dependencies]
base64 = "0.13.1"
reqwest = "0.11.12"
