[package]
name = "proget"
version = "0.2.0"
authors = ["Hunter Wittenborn <hunter@hunterwittenborn.com>"]
description = "A client for the ProGet API"
edition = "2021"
repository = "https://github.com/hwittenborn/proget-rust-sdk"
license = "GPL-3.0-only WITH GPL-3.0-linking-exception"
keywords = ["proget"]
categories = ["api-bindings"]

[dependencies]
base64 = "0.13.1"
reqwest = "0.11.12"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
